<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:id="@+id/lblNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblAluno"
        android:textAlignment="center" />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/lblSerie"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/lblSerie"/>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/lblEscola"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/lblEscola" />

</LinearLayout>