<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/fundo1"
    android:layout_height="match_parent"
    tools:context=".LivroActivity">
    <TextView
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:textAlignment="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:text="@string/lblLivro"/>

    <TextView
        android:layout_marginHorizontal="30dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:layout_marginVertical="10dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblInfLivro"/>
    <EditText
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtLivro"
        android:imeOptions="actionNext"
        />
    <TextView
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:textAlignment="center"
        android:layout_margin="30dp"
        android:layout_marginVertical="50dp"
        android:layout_height="wrap_content"
        android:text="@string/lblQtd"/>
    <EditText
        android:inputType="number"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:imeOptions="actionNext"
        android:layout_height="wrap_content"
        android:id="@+id/txtQtd"/>
    <Button
        android:id="@+id/btnCalcularLivro"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCalcularLivro"/>






</LinearLayout>