<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblEntrar"
        android:textAlignment="center"
        android:layout_marginTop="35dp"/>

    <EditText
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        android:inputType="textPersonName|textCapWords"
        android:imeOptions="actionNext"
        android:id="@+id/txtLogin"
        android:hint="@string/lblLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        android:id="@+id/txtSenha"
        android:hint="@string/lblSenha"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"/>

</LinearLayout>